checkbox (0.16.7) UNRELEASED; urgency=low

  [ Jeff Lane ]
  * jobs/suspend.txt.in, jobs/usb.txt.in, jobs/mediacard.txt.in: moved jobs to
    suspend.txt.in for USB and Mediacard after suspend, renamed jobs
    appropriately and adjusted the descriptions.
    data/sru.whitelist: added usb and usb3 after suspend jobs for SRU i
    (LP: #1201420)

  [ Daniel Manrique ]
  * scripts/audio_test: Changed the test frequency to 5040 Hz and increased
    the sampling time to 5 seconds, to improve reliability (LP: #1070776)
  * scripts/pm_test: Added support for invoking through pkexec (LP: #1201769)
  * jobs/audio.txt.in: Added balance jobs (both internal speakers and
    headphones)

  [ Brendan Donegan ]
  * checkbox/parsers/cpuinfo.py - update parser logic to understand cpuinfo
    files produced by ARM processors (LP: #1197397)
  * scripts/memory_compare - take in to account 'bank' hardware which appears
    on systems with multiple memory modules installed (LP: #1204013)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Sat, 13 Jul 2013 11:43:11 +0100

checkbox (0.16.6) raring; urgency=low

  [ Brendan Donegan ]
  * plugins/launchpad_report.py - Don't include attachments which have a status
    of 'unsupported' (LP: #1196531)
  * checkbox/parsers/lshwjson.py, scripts/memory_compare - Create a parser for
    lshw and use this in the memory_compare script instead of dmidecode
    (LP: #1184661)
  * plugins/subunit_report.py - Prevent crash when job output contains 
    non-ASCII characters (LP: #1196838)
  * jobs/info.txt.in - Add lshw_attachment job with dependency on the lshw
    package, and also give dmidecode_attachment a dependency on dmidecode,
    this way we get the right attachments (LP: #1199245)

  [ Alberto Milone ]
  * checkbox-old/scripts/color_depth_info:
    - Be more strict in the regex so as to make sure that we catch the
      correct string.
    - Open the log using the 'rb' flag. This prevents python from throwing
      a UnicodeDecodeError.
  