@@ -1,5 +1,10 @@
 checkbox (0.16.7) UNRELEASED; urgency=low
 
+  [ Po-Hsu Lin ]
+  * jobs/mobilebroadband.txt.in: Make it disconnect from the mobile broadband
+    network after job is completed to avoid any unexpected data transmission 
+    expense (LP: #1204799)
+
   [ Jeff Lane ]
   * jobs/suspend.txt.in, jobs/usb.txt.in, jobs/mediacard.txt.in: moved jobs to
     suspend.txt.in for USB and Mediacard after suspend, renamed jobs
